compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unit_option_ignores_bytes.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let assert <<x:unit(2)-bytes-size(3)>> = <<1:6>>\n  x\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert <<x:unit(2)-bytes-size(3)>> = <<1:6>>
  x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    case <<1:6>> of
        <<X:3/binary-unit:2>> ->
            X;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value,
                start => 19,
                'end' => 67,
                pattern_start => 30,
                pattern_end => 57
            })
    end.
