compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unit_with_bits_option.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
assertion_line: 536
expression: "\npub fn go(x) {\n  <<x:bits-size(8)-unit(8)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits-size(8)-unit(8)>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(bitstring()) -> bitstring().
go(X) ->
    <<X:64/bitstring>>.
