compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unit_with_bits_option_pattern.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main(x) {\n  let assert <<a:size(8)-unit(8)-bits, _:bits>> = x\n  a\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  let assert <<a:size(8)-unit(8)-bits, _:bits>> = x
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(bitstring()) -> bitstring().
main(X) ->
    case X of
        <<A:64/bitstring, _/bitstring>> ->
            A;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value,
                start => 20,
                'end' => 69,
                pattern_start => 31,
                pattern_end => 65
            })
    end.
